fix bug hide visibilty nav buttons

--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -1,7 +1,6 @@
 .navigation {
     &__checkbox {
         display: none;
-
     }
 
     &__button {
@@ -41,6 +40,7 @@
 
         width: 0;
         opacity: 0;
+        visibility: hidden;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
@@ -93,6 +93,7 @@
 
     &__checkbox:checked~&__nav {
         opacity: 1;
+        visibility: visible;
         width: 100%;
     }
 
@@ -138,16 +139,16 @@
         top: .9rem;
     }
 
-    &__checkbox:checked + &__button &__icon {
+    &__checkbox:checked+&__button &__icon {
         background-color: transparent;
     }
 
-    &__checkbox:checked + &__button &__icon::before {
+    &__checkbox:checked+&__button &__icon::before {
         top: 0;
         transform: rotate(135deg);
     }
 
-    &__checkbox:checked + &__button &__icon::after {
+    &__checkbox:checked+&__button &__icon::after {
         top: 0;
         transform: rotate(-135deg);
     }
